# ssu_rpm

./: README.md  my-hello-0.0.1.tar
example-rpmbuild/: main.c  my_hello.spec
example/.gear/: my_hello_cmake.spec  rules
example_project/: CMakeLists.txt
